--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "firebase": "^8.2.9",
     "node-fetch": "^2.6.1",
     "pastebin-ts": "^1.2.0"
   }
